--- a/Lab4/MainWindow.xaml
+++ b/Lab4/MainWindow.xaml
@@ -6,15 +6,18 @@
         xmlns:local="clr-namespace:Jumper"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Grid Background="#FF4DBD4D">
         <Label Content="ПРЫГУН" HorizontalAlignment="Left" Margin="366,10,0,0" VerticalAlignment="Top" Height="43" Width="97" FontWeight="Bold" FontSize="20"/>
-        <Label Content="Худший прыжок" HorizontalAlignment="Left" Margin="92,142,0,0" VerticalAlignment="Top" Height="37" Width="122" FontSize="14"/>
-        <Label Content="Лучший прыжок" HorizontalAlignment="Left" Margin="92,179,0,0" VerticalAlignment="Top" Height="37" Width="122" FontSize="14"/>
+        <Label Content="Худший прыжок" HorizontalAlignment="Left" Margin="92,142,0,0" VerticalAlignment="Top" Height="37" Width="133" FontSize="16" FontFamily="Times New Roman" FontWeight="Bold"/>
+        <Label Content="Лучший прыжок" HorizontalAlignment="Left" Margin="92,179,0,0" VerticalAlignment="Top" Height="33" Width="133" FontSize="16" FontFamily="Times New Roman" FontWeight="Bold"/>
         <TextBox x:Name="TBw" HorizontalAlignment="Left" Height="27" Margin="230,148,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="60"/>
         <TextBox x:Name="TBb" HorizontalAlignment="Left" Height="27" Margin="230,185,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="60"/>
-        <Button x:Name="Count" Content="РАССЧИТАТЬ" HorizontalAlignment="Left" Margin="344,162,0,0" VerticalAlignment="Top" Width="119" Height="37" Click="Count_Click"/>
-        <Label x:Name="Lavg" Content="Средний прыжок:" HorizontalAlignment="Left" Margin="496,170,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.204,0.11" FontSize="14" Width="172" Height="63"/>
-        <Label x:Name="ErrorMessage" Content="" HorizontalAlignment="Left" Margin="169,238,0,0" VerticalAlignment="Top" Height="127" Width="510" FontSize="14"/>
+        <Button x:Name="Count" Content="РАССЧИТАТЬ" HorizontalAlignment="Left" Margin="344,162,0,0" VerticalAlignment="Top" Width="135" Height="50" Click="Count_Click" Background="#FFD8F139" FontSize="16" FontWeight="Bold" FontFamily="Times New Roman"/>
+        <Label x:Name="Lavg" Content="Средний прыжок:" HorizontalAlignment="Left" Margin="496,170,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.204,0.11" FontSize="16" Width="286" Height="52" FontFamily="Times New Roman" FontWeight="Bold"/>
+        <Label x:Name="ErrorMessage" Content="" HorizontalAlignment="Left" Margin="155,277,0,0" VerticalAlignment="Top" Height="112" Width="502" FontSize="14"/>
+        <Label Content="Рекорд" HorizontalAlignment="Left" Margin="92,212,0,0" VerticalAlignment="Top" Height="32" Width="97" FontWeight="Bold" FontFamily="Times New Roman" FontSize="16" RenderTransformOrigin="0.789,0.448"/>
+        <TextBox x:Name="TBr" HorizontalAlignment="Left" Height="27" Margin="230,217,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="60"/>
+        <Label x:Name="Lrec" Content="Не хватило до рекорда:" HorizontalAlignment="Left" Margin="496,217,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.204,0.11" FontSize="16" Width="286" Height="52" FontFamily="Times New Roman" FontWeight="Bold"/>
 
     </Grid>
 </Window>
